--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@smastrom/react-rating": "^1.5.0",
     "babel": "^6.23.0",
     "express": "^4.18.2",
+    "express-fileupload": "^1.5.0",
     "mongodb": "6.0",
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
